Tried making my own CSS with my index.html, it went well. Looks similar to the one in WebStuff. Most elements have fixed position, except the area where Code Boxes are put in. That area can overflow with vertical scrolling

--- a/moseCSS.css
+++ b/moseCSS.css
@@ -64,7 +64,7 @@ body {
     background-color: lightgrey;
     color: black;
     border: none;
-    border-left: 10px solid lightgrey;
+    border-left: 16px solid lightgrey;
     font-size: 20px;
     text-align: left;
     font-weight: bold;
@@ -73,7 +73,7 @@ body {
 .boxButtons {
     background-color: lightgrey;
     border: none;
-    border-left: 10px solid lightgrey;
+    border-left: 16px solid lightgrey;
     color: black;
     font-size: 20px;
     width: 160px;
@@ -84,7 +84,7 @@ body {
 .boxButtons:hover {
     background-color: black;
     color: white;
-    border-left: 10px solid black;
+    border-left: 16px solid black;
 }
 
 #codeArea {
